--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,18 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v4
+      -              
+        name: Set up Python
+        uses: actions/setup-python@v4        
       -
+        name: Install dependencies
+        run: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt             
+      -  
+        name : run tests
+        run :  pytest tests
+      -  
         name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
